# castle

./: compile_commands.json  meson.build
src/: gamemath.cc  gamemath.h  main.cc  sdl.cc  sdl.h
